@@ -7,6 +7,7 @@ Changes 0.9.6.4 ->
 * Support some unusual vendor-specific-application-id AVP formats.
 * AVP_Time.queryDate() returned wrong value (Date object creation with seconds
   instead of milliseconds)
+* AVP.queryPayload() made public.
 
 Changes 0.9.6.3 -> 0.9.6.4
 * Fix regression in 0.9.6.3:
